--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -22,7 +22,7 @@ ContractCurrency= ContractCurrency
 B2BAgreementIndicator= B2BAgreementIndicator
 ItemUpdateControl= ItemUpdateControl
 PriceUpdateControl= PriceUpdateControl
-SubscriptionStatus= SubscriptionStatus
+SubscriptionStatus= Subscription Status
 ChangeInitiator= ChangeInitiator
 CIFCreationStatus= CIFCreationStatus
 SupplierANID= SupplierANID
@@ -34,7 +34,58 @@ LastChangedTimestamp= LastChangedTimestamp
 IsLocked= IsLocked
 SupplierEmail= SupplierEmail
 ChildSubscriptionStatus= ChildSubscriptionStatus
-RejectionComments= RejectionComments
+RejectionComments= Rejection Comments
+
+ItemUniqueKey=ItemUniqueKey
+ItemStatus=ItemStatus
+MaterialNumber=Material Number
+ContractNumber=Contract Number
+ContractLineNumber=Contract LineNumber
+SupplierPartID=Supplier PartID
+SupplierID=Supplier ID
+ItemDescription=ItemDescription
+UnitPrice=UnitPrice
+MaterialCountryOfOrigin=Material CountryOfOrigin
+UnitOfMeasure=UnitOfMeasure
+ShortName=ShortName
+ClassificationCodeDomain=ClassificationCodeDomain
+ClassificationCodeKey=ClassificationCodeKey
+LeadTime=LeadTime
+ContractCurrency=ContractCurrency
+MinimumQuantity=MinimumQuantity
+ManufacturerName=ManufacturerName
+ManufacturerPartID=ManufacturerPartID
+QuantityInterval=QuantityInterval
+ContractEffectiveDate=ContractEffectiveDate
+ContractExpirationDate=ContractExpirationDate
+ItemSpecification1Key=ItemSpecification1Key
+ItemSpecification1Value=ItemSpecification1Value
+ItemSpecification2Key=ItemSpecification1Value
+ItemSpecification2Value=ItemSpecification1Value
+Keywords=Keywords
+RelatedItem1=RelatedItem1
+RelatedItem2=RelatedItem2
+RelatedItem3=RelatedItem3
+PriceConfiguration1Amount=PriceConfiguration1Amount
+PriceConfiguration1LowerBand=PriceConfiguration1LowerBand
+PriceConfiguration2Amount=PriceConfiguration2Amount
+PriceConfiguration2LowerBand=PriceConfiguration2LowerBand
+PriceConfiguration3Amount=PriceConfiguration3Amount
+PriceConfiguration3LowerBand=PriceConfiguration3LowerBand
+Parameter1Key=Parameter1Key
+Parameter1Value=Parameter1Value
+Parameter2Key=Parameter2Key
+Parameter2Value=Parameter2Value
+hazardousmaterials=hazardousmaterials
+green=green
+TemporaryUnavailable=TemporaryUnavailable
+DeletionIndicator=DeletionIndicator
+
+Image1url=Image1url
+Image2url=Image2url
+Image3url=Image3url
+Image4url=Image4url
+Image5url=Image5url
 
 
 
